# ml-starter-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_example.py
