[project]
name = "your_project"
version = "0.1.0"
description = "A machine learning starter project"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.mypy]
strict = true

[build-system]
requires = ["uv"]
build-backend = "uv.build"

[project.optional-dependencies.dev]
precommit = ["pre-commit"]