[project]
name = "your_project"
version = "0.1.0"
description = "A machine learning starter project"
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mypy",
    "ruff"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.mypy]
strict = true

